Add complete synthetic question bank appendix (20 questions)

--- a/paper/agentbusters.tex
+++ b/paper/agentbusters.tex
@@ -769,4 +769,107 @@ sampling:
   seed: 42
 \end{lstlisting}
 
+\section{Complete Synthetic Question Bank}
+
+The following 22 questions comprise the Analytical Reasoning section. Questions are organized by topic with difficulty ratings (E=Easy, H=Hard, X=Expert).
+
+\subsection{Data Retrieval Questions (2)}
+
+\begin{enumerate}
+\item \textbf{[E] Quantitative Retrieval}: What was AAPL's EBITDA in fiscal year 2024? \\
+\textit{Answer: \$134.66B}
+
+\item \textbf{[E] Qualitative Retrieval}: Describe AAPL's main business and products. \\
+\textit{Answer: Apple Inc. designs, manufactures, and markets smartphones (iPhone), tablets (iPad), computers (Mac), wearables (Apple Watch), and provides digital services.}
+\end{enumerate}
+
+\subsection{Capital Budgeting (2)}
+
+\begin{enumerate}
+\setcounter{enumi}{2}
+\item \textbf{[H] NPV Crossover Rate}: A company has two mutually exclusive projects. Project A requires \$100,000 investment and returns \$150,000 in Year 1. Project B requires \$100,000 investment and returns \$180,000 in Year 2. At what discount rate are the two projects equally attractive? \\
+\textit{Answer: 20\%}
+
+\item \textbf{[H] FCFF Calculation}: Company ABC has EBIT of \$10 million, depreciation of \$2 million, capital expenditures of \$3 million, and working capital increase of \$1 million. The tax rate is 25\%. What is the Free Cash Flow to Firm? \\
+\textit{Answer: \$5.5 million}
+\end{enumerate}
+
+\subsection{Portfolio Theory (3)}
+
+\begin{enumerate}
+\setcounter{enumi}{4}
+\item \textbf{[H] Beta Adjustment}: An investor holds Stock X (60\% weight, $\beta$=1.2) and Stock Y (40\% weight, $\beta$=0.8). To reduce portfolio beta to 1.0 by adjusting only Stock X weight (remainder in risk-free), what should be the new weight of Stock X? \\
+\textit{Answer: 50\% (or 83.3\% depending on interpretation)}
+
+\item \textbf{[X] Leverage \& Standard Deviation}: Stock XYZ has expected return 12\% and $\sigma$=25\%. Risk-free rate is 4\%. To achieve 16\% expected return using XYZ and risk-free, what is the portfolio's standard deviation? \\
+\textit{Answer: 37.5\%, Leverage: 1.5x}
+
+\item \textbf{[H] Combined Leverage}: A company has DOL=2.5 and DFL=1.6. If sales increase by 10\%, by what percentage will EPS change? \\
+\textit{Answer: 40\%}
+\end{enumerate}
+
+\subsection{Fixed Income (4)}
+
+\begin{enumerate}
+\setcounter{enumi}{7}
+\item \textbf{[X] Bond Pricing Arbitrage}: A zero-coupon bond (\$1,000 face, 5-year) trades at \$680. A 6\% coupon bond trades at par. What is the arbitrage-free price of a 5-year 8\% coupon bond? \\
+\textit{Answer: \$1,085.35}
+
+\item \textbf{[X] Duration Immunization}: A pension fund has 15-year liability duration. Bond A has 5-year duration, Bond B has 20-year duration. What percentage in Bond B to immunize? \\
+\textit{Answer: 66.67\%}
+
+\item \textbf{[H] Perpetuity Price Change}: A perpetual bond pays \$50 annually. If rates rise from 5\% to 6\%, what is the percentage price change? \\
+\textit{Answer: -16.67\%}
+
+\item \textbf{[H] Gordon Growth Model}: Stock just paid \$2.00 dividend, growth rate 6\%, required return 10\%. What is intrinsic value? \\
+\textit{Answer: \$53.00}
+\end{enumerate}
+
+\subsection{Corporate Finance (3)}
+
+\begin{enumerate}
+\setcounter{enumi}{11}
+\item \textbf{[H] Leverage Effect on ROE}: Firm has \$500M assets, D/E=1.5, 6\% interest, 30\% tax, ROA=10\%. What is ROE? \\
+\textit{Answer: 11.2\% (or 18.1\% depending on formula used)}
+
+\item \textbf{[X] Modigliani-Miller Homemade Leverage}: Firm A is all-equity (1M shares at \$50). Firm B has \$20M debt, \$30M equity. How can an investor owning 10\% of A replicate 10\% of B's equity? \\
+\textit{Answer: Borrow \$2M, invest \$5M in A, net investment \$3M}
+
+\item \textbf{[H] Stock Split}: Company has 100,000 shares at \$25. After 3-for-2 split, what are new price and shares outstanding? \\
+\textit{Answer: \$16.67/share, 150,000 shares}
+\end{enumerate}
+
+\subsection{Options \& Derivatives (4)}
+
+\begin{enumerate}
+\setcounter{enumi}{14}
+\item \textbf{[X] Bull Call Spread}: Buy \$100 call for \$8, sell \$110 call for \$3. What are max profit, max loss, and breakeven? \\
+\textit{Answer: Max Profit \$5, Max Loss \$5, Breakeven \$105}
+
+\item \textbf{[H] Risk-Neutral Probability}: Stock at \$100 can go up 20\% or down 15\%. Risk-free rate 5\%. What is risk-neutral probability of up move? \\
+\textit{Answer: 57.14\%}
+
+\item \textbf{[X] Put-Call Parity}: Call priced at \$8, stock at \$100, strike \$95, risk-free 5\%, 1-year expiry. What should put price be? \\
+\textit{Answer: \$1.37 (or negative indicating arbitrage)}
+
+\item \textbf{[X] Interest Rate Swap}: X borrows at 8\% fixed or LIBOR+1\%. Y borrows at 10\% fixed or LIBOR+2\%. If they swap (X floating, Y fixed) and split gains equally, what fixed rate does X pay? \\
+\textit{Answer: 7.50\%}
+\end{enumerate}
+
+\subsection{Time Value of Money (2)}
+
+\begin{enumerate}
+\setcounter{enumi}{18}
+\item \textbf{[H] Present Value Comparison}: Choose between \$10,000 today or \$12,500 in 3 years at 8\% discount rate. Which is better and by how much? \\
+\textit{Answer: Option A (\$10,000 today) better by \$75.15}
+\end{enumerate}
+
+\subsection{Forex (1)}
+
+\begin{enumerate}
+\setcounter{enumi}{19}
+\item \textbf{[X] Covered Interest Arbitrage}: Spot EUR/USD=1.10, 1-year forward=1.12, USD rate=5\%, EUR rate=3\%. Is there arbitrage? Calculate profit per \$1M. \\
+\textit{Answer: Yes, approximately \$7,273 profit per \$1M}
+\end{enumerate}
+
 \end{document}
