Update PRBench citation to arXiv:2511.11562
- Replace HuggingFace dataset link with proper arXiv citation
- Add correct authors (Akyürek et al.)
- Full title: PRBench: Large-Scale Expert Rubrics for Evaluating High-Stakes Professional Reasoning

--- a/paper/agentbusters.tex
+++ b/paper/agentbusters.tex
@@ -842,10 +842,11 @@ Lu, G., Guo, X., Zhang, R., Zhu, W., and Liu, J. (2025).
 \newblock \emph{arXiv preprint arXiv:2601.06401}.
 \newblock \url{https://arxiv.org/abs/2601.06401}.
 
-\bibitem[Scale AI(2025)]{prbench2025}
-Scale AI (2025).
-\newblock PRBench: Professional Reasoning Benchmark.
-\newblock \url{https://huggingface.co/datasets/scale-ai/prbench}.
+\bibitem[Aky\"{u}rek et al.(2025)]{prbench2025}
+Aky\"{u}rek, A.~F., Gosai, A., Zhang, C.~B.~C., et al. (2025).
+\newblock PRBench: Large-Scale Expert Rubrics for Evaluating High-Stakes Professional Reasoning.
+\newblock \emph{arXiv preprint arXiv:2511.11562}.
+\newblock \url{https://arxiv.org/abs/2511.11562}.
 
 \bibitem[A2A Protocol(2025)]{a2a2025}
 Google and Linux Foundation (2025).
